# ChangeLog for net-im/kopete
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/kopete/ChangeLog,v 1.68 2006/07/12 09:09:06 corsair Exp $

  12 Jul 2006; Markus Rothe <corsair@gentoo.org> kopete-0.12.0-r2.ebuild:
  Added ~ppc64

*kopete-0.12.0-r2 (11 Jul 2006)

  11 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/kopete-0.12-icqfix.patch, +kopete-0.12.0-r2.ebuild:
  Add patch to fix KDE BUG #130630 (unable to connect to ICQ since today), and
  add a few useflags from bug #125782, thanks to Andrew Kirilenko. Dropped
  ~ppc64 useflag because of missing netmeeting dependency.

  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  kopete-0.12.0-r1.ebuild:
  Pinpoint virtual/x11 version to less than 7.

  05 Jul 2006; Markus Rothe <corsair@gentoo.org> kopete-0.12.0-r1.ebuild:
  Added ~ppc64

  27 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> -kopete-0.12.0.ebuild,
  kopete-0.12.0-r1.ebuild:
  Add check for Qt 3 built with opengl support, needed for webcam support.

*kopete-0.12.0-r1 (15 Jun 2006)

  15 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/kopete-0.12-jabber-muc-chat.patch, +kopete-0.12.0-r1.ebuild:
  Add patch to fix Jabber MUC invitations, as reported by Raymond Lewis
  Rebbeck in bug #136845.

  09 Jun 2006; Matteo Azzali <mattepiu@gentoo.org>
  +files/kopete-0.12-away.diff, kopete-0.12.0.ebuild:
  patched for bug #136167 , with Flameeyes permission

  07 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> kopete-0.12.0.ebuild:
  Add missing slp flag to IUSE. Thanks to Jakub Moc in bug #135988.

  02 Jun 2006; Stefan Schweizer <genstef@gentoo.org> kopete-0.12.0.ebuild:
  Properly block kde-base/kdenetwork and net-libs/libjingle thanks to Daniel
  Webert <rockoo@gmail.com> in bug 135310

  02 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> kopete-0.12.0.ebuild:
  Add ~ppc keyword (okay from lu_zero).

*kopete-0.12.0 (02 Jun 2006)

  02 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>