@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX kopete-0.12-away.diff 1076 RMD160 4ec518082447c48d1443ae1b95a97b6e438145c2 SHA1 cccc08a17258d42301dade25c9195719e88d707c SHA256 d966c34131caa0696851c8d5f56a22982127afc0c3c9cf797ef003c259737237
 MD5 d2573dff2b7cddcdca0830215a8bdc6c files/kopete-0.12-away.diff 1076
 RMD160 4ec518082447c48d1443ae1b95a97b6e438145c2 files/kopete-0.12-away.diff 1076
@@ -19,14 +22,14 @@ EBUILD kopete-0.12.0-r1.ebuild 2556 RMD160 cef933192b38d0080112706ad9e46b7efea82
 MD5 3ad8b893e28d70015569a0c5a16c3084 kopete-0.12.0-r1.ebuild 2556
 RMD160 cef933192b38d0080112706ad9e46b7efea820fe kopete-0.12.0-r1.ebuild 2556
 SHA256 2530524bf5cdef421a6788d2675af758388c689b1c274949f45c99d5eebf150b kopete-0.12.0-r1.ebuild 2556
-EBUILD kopete-0.12.0-r2.ebuild 3336 RMD160 dd5eac5c6b5f1003ff804a8c3ee5ad3b67921e41 SHA1 aff003c59df5711b4d6a9448e67fa9512d8764d5 SHA256 0797fd209c7cfd3c9e2e68624f4beadf277da8e116a2d5e0a0be3ff6c592c5fa
-MD5 d72dc81b4dd83635480038e20184f1cf kopete-0.12.0-r2.ebuild 3336
-RMD160 dd5eac5c6b5f1003ff804a8c3ee5ad3b67921e41 kopete-0.12.0-r2.ebuild 3336
-SHA256 0797fd209c7cfd3c9e2e68624f4beadf277da8e116a2d5e0a0be3ff6c592c5fa kopete-0.12.0-r2.ebuild 3336
-MISC ChangeLog 3717 RMD160 ab781e8dceebffd819633952c21327b63d5618fe SHA1 81cd838e9aac5cb6ecc780f4b825f77bd0b46405 SHA256 0bfb3076534f95e1391d26b3b0291edb81b9da4c96a3805212db32acf25c7a0b
-MD5 05f5be20bb5259f74987b9ab02c3f8c3 ChangeLog 3717
-RMD160 ab781e8dceebffd819633952c21327b63d5618fe ChangeLog 3717
-SHA256 0bfb3076534f95e1391d26b3b0291edb81b9da4c96a3805212db32acf25c7a0b ChangeLog 3717
+EBUILD kopete-0.12.0-r2.ebuild 4094 RMD160 eb4ef2e3e636ffda2b7edfa080384e2d311669d2 SHA1 e760a8414607dffeb0ee7c6f9643032ad65f419a SHA256 f842eeef28df5eb6fd26937415d86ae9c2b570eab73d824bea63838778be490b
+MD5 86ee5caa889f0bb7d25fd910982a460e kopete-0.12.0-r2.ebuild 4094
+RMD160 eb4ef2e3e636ffda2b7edfa080384e2d311669d2 kopete-0.12.0-r2.ebuild 4094
+SHA256 f842eeef28df5eb6fd26937415d86ae9c2b570eab73d824bea63838778be490b kopete-0.12.0-r2.ebuild 4094
+MISC ChangeLog 3877 RMD160 572571b243b2b9c38a5507ad5db09a798e95bc77 SHA1 3ec4624a70f3b4ddd7a31f050f97df0af1b61d1f SHA256 51415b2d901fc2f0df2d860ce39b297fa2c5ea21745427529452fb0131e61d7c
+MD5 df83b893f89c61bec6992c6acb79aca4 ChangeLog 3877
+RMD160 572571b243b2b9c38a5507ad5db09a798e95bc77 ChangeLog 3877
+SHA256 51415b2d901fc2f0df2d860ce39b297fa2c5ea21745427529452fb0131e61d7c ChangeLog 3877
 MISC metadata.xml 254 RMD160 ddca3e329213be86e7b2d62c52078a77ea308f4a SHA1 899c7665ef94c737788e8a2c53bc8a3d97a1356a SHA256 addaf999f171c0e580a0399105382e9b213e14f3bd85b74671742b41f41c2261
 MD5 64e213d0db015eb97e16b31ec6e748c3 metadata.xml 254
 RMD160 ddca3e329213be86e7b2d62c52078a77ea308f4a metadata.xml 254
@@ -37,3 +40,10 @@ SHA256 7c82928c5b35764c916e17475c795b9a07d73a2f5db052ad0afac911089abb74 files/di
 MD5 01832fcb2e5e8d98235b4ff35d29c467 files/digest-kopete-0.12.0-r2 241
 RMD160 570f6293396053404d178f86b01eaecc5c783d44 files/digest-kopete-0.12.0-r2 241
 SHA256 7c82928c5b35764c916e17475c795b9a07d73a2f5db052ad0afac911089abb74 files/digest-kopete-0.12.0-r2 241
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.4 (GNU/Linux)
+
+iD8DBQFEtWRoAiZjviIA2XgRAgc9AKDI4Qp1SLtosB+QgKWKGFXA3PL62QCglQTc
+mXrVhVdDSUf6XLlr/dhZnUM=
+=dtGL
+-----END PGP SIGNATURE-----
