@@ -1,9 +1,13 @@
 # ChangeLog for net-im/kopete
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/kopete/ChangeLog,v 1.68 2006/07/12 09:09:06 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/kopete/ChangeLog,v 1.69 2006/07/12 21:06:35 flameeyes Exp $
 
   12 Jul 2006; Markus Rothe <corsair@gentoo.org> kopete-0.12.0-r2.ebuild:
   Added ~ppc64
+
+  12 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
+  kopete-0.12.0-r2.ebuild:
+  Add a few more useflags and use debug useflag to control testbed protocol.
 
 *kopete-0.12.0-r2 (11 Jul 2006)
 
